--- a/views/location.hbs
+++ b/views/location.hbs
@@ -15,11 +15,14 @@
       <button type="submit" id="next-button" class="btn btn-outline-primary btn-block d-none btn-block btn-lg font-weight-bold">Next</button>
    </form>
     <br>
-      <div id="map" style="width:100%;height:400px"></div>
+      <div id="map" style="width:100%;height:320px"></div>
+       <br><br>
    
 </div>
 </div>
- 
+</div>
+</div>
+
 <script>
 
 
