--- a/views/secret.hbs
+++ b/views/secret.hbs
@@ -1,4 +1,35 @@
-<div class="general-container">
+
+
+
+
+
+<div id="emailContainer">
+  <h1>${responses[1].name} (${responses[1].email}) invited you for a date!</h1>
+  <h2>Check the details below</h2>:
+  <strong>Location:</strong> ${responses[0].date_location_name}<br>
+  <strong>Address:</strong> ${responses[0].address}<br>
+  <strong>Time:</strong> ${req.body.dateTime}<br>
+  
+  Have fun 😉!
+  -- Save my Date team`
+</div>
+
+
+
+<style>
+body {background-color: #414042;
+      color: #C11F43;
+      }
+#emailContainer {
+  margin: 0 auto;
+}
+</style>
+
+
+
+
+
+{{!-- <div class="general-container">
 <h1>Choose your favorite TA to hang out with</h1>
 
 
@@ -35,4 +66,4 @@
 {{/each}}
 </ul>
 
-<br>
+<br> --}}
