--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,7 +1,7 @@
 <div class="main-container-primary h-100 w-100 align-middle">
 <div class="general-container">
     <h1 class="text-center"></h1>
-    <img src="images/Brand_White_big.png" alt="brand-white" width="70%">
+    <img src="images/Brand_White_big.png" id="main-brand-index" alt="brand-white">
 
 {{#if isNotConnected}}
 
