--- a/public/stylesheets/style.scss
+++ b/public/stylesheets/style.scss
@@ -23,8 +23,13 @@ main {
 
 footer {
   background-color: $primary;
-  padding: 1vh;
-  min-height:1.5vh;
+  padding-top: 1vh;
+  min-height:1vh;
+}
+
+#main-brand-index{
+  // max-width: 70%;
+  width:90%;
 }
 
 .marker {
@@ -44,6 +49,7 @@ footer {
 nav{
   font-size:20px;
   // height:7vh;
+
 }
 
 nav ul {
@@ -102,21 +108,22 @@ width:100%;
       font-size: 24px;
     }
 
+    #main-brand-index{
+      max-width: 40%;
+    }
+
+
     .main-container-primary,.main-container-grey{
-      padding:0;
+      // padding:0;
       display:flex;
       justify-content: center;
     }
 
     .general-container {
       margin:0 auto;
-      width:40vw;
+      width:50vw;
       padding:0;
       min-height:25vw;
     }
 
   }
-
-
-
-
