--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -34,8 +34,10 @@
     <li class="nav-item"><a class="nav-link text-white" href="/auth/signup">Signup</a></li>
      {{/if}}
     {{#if isConnected}}
-    <li class="nav-item"><a class="nav-link text-white" href="/profile-page">Profile</a></li>
-    <li class="nav-item"><a class="nav-link text-white" href="/auth/logout">Logout <i class="fas fa-user-alt-slash"></i></a></li>
+
+    <li class="nav-item navbar-right"><a class="nav-link text-white" href="/profile-page">Profile</a></li>
+    <li class="nav-item navbar-right"><a class="nav-link text-white" href="/auth/logout">Logout <i class="fas fa-user-alt-slash"></i></a></li>
+
     {{/if}}
     {{!-- <li class="nav-item"><a class="nav-link text-white" href="/date-type">Date Type</a></li>
     <li class="nav-item"><a class="nav-link text-white" href="/date-options">Date Options</a></li>
