--- a/views/profile-page.hbs
+++ b/views/profile-page.hbs
@@ -7,10 +7,16 @@
     <h3 class="card-title text-center text-primary"><i class="fas fa-user-circle"></i> My Profile</h3>
     <p class="card-text"><p>E-mail: {{user.email}}</p> 
     <p class="card-text">Name: {{user.name}}</p>
-    
   </div>
 </div>
-
+  {{#if message}}
+  <div class="alert alert-success alert-dismissible fade show" role="alert">
+  <strong>{{message}}</strong>
+  <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+    <span aria-hidden="true">&times;</span>
+  </button>
+</div>
+  {{/if}}
 <br><br>
 
 <h3 class="text-center text-primary">My Dates</h3>
@@ -40,8 +46,6 @@
   <input type="hidden" value="{{this._id}}" name="dateId">
 <button class="btn btn-info" type="submit">Send details to my Date!</button>
 </form>
-
-
 <br><br>
 {{/each}}
 </ul>
