--- a/public/stylesheets/style.scss
+++ b/public/stylesheets/style.scss
@@ -16,6 +16,11 @@ body {
   justify-content: space-between;
 }
 
+// a{
+//   color:blue;
+//   text-decoration: underline;
+// }
+
 main {
   flex-grow: 1;
   padding: 0px;
