--- a/views/auth/login.hbs
+++ b/views/auth/login.hbs
@@ -34,7 +34,7 @@
   <div class="card-footer text-muted bg-primary">
    <p class="account-message text-white">
     <small>Don't have an account yet?
-    <a href="/auth/signup">Signup</a></small>
+    <a href="/auth/signup"  class="badge badge-secondary">Signup</a></small>
   </p>
 
 </div>
