--- a/views/index.hbs
+++ b/views/index.hbs
@@ -8,7 +8,7 @@
 <br>
     <a href="/auth/login" class="btn btn-light btn-block btn-lg font-weight-bold">Login</a>
     <br>
-    <p class="text-center text-white">Don't have an account yet? <a href="/auth/signup">Signup</a></p>
+    <p class="text-center text-white">Don't have an account yet? <a href="/auth/signup" class="badge badge-secondary">Signup</a></p>
     <br> <br>
 
      {{/if}}
