--- a/views/auth/login.hbs
+++ b/views/auth/login.hbs
@@ -10,6 +10,7 @@
   <div class="card-body bg-primary">
     
 <form action="/auth/login" method="POST" id="form-container">
+
   <div class="form-group text-white text-bold">
   <label for="email">E-mail</label>
   <input id="email" type="text" name="email" placeholder="Your e-mail here"  class="form-control" >
@@ -17,7 +18,7 @@
 
 <div class="form-group text-white text-bold">
   <label for="password">Password</label>
-  <input id="password" type="password" name="password" placeholder="Your password">
+  <input id="password" type="password" name="password" placeholder="Your password" class="form-control">
  </div>
 
   <br>
