--- a/views/price-range.hbs
+++ b/views/price-range.hbs
@@ -1,6 +1,6 @@
 <div class="main-container-grey h-100 w-100 align-middle px-2">
 <div class="general-container  px-4">
-<h2 class="text-center text-white">Choose based on the cost</h2>
+<h2 class="text-center text-white">What's your budget?</h2>
 <br><br>
 <div class="container">
   <div class="row">
