--- a/views/profile-page.hbs
+++ b/views/profile-page.hbs
@@ -25,16 +25,20 @@
 <br>
 <ul>
 {{#each userDates}}
-<b>Location:</b> {{this.date_location_name}} <br>
 {{#if this.cuisines}}
+<b>Location:</b> {{this.date_location_name}} <br>
 <b>Cuisines:</b> {{this.cuisines}} <br>
 <b>Average cost for two:</b> {{this.AvgCostforTwo}}€ <br>
-{{/if}}
-{{#if this.address}}
 <b>Address:</b> {{this.address}} <br>
 {{/if}}
-{{#if this.title}}
-<b>Title:</b> {{this.title}} <br>
+{{#if this.website}}
+<b>Location:</b> {{this.date_location_name}} <br>
+<b>Address:</b> {{this.address}} <br>
+<b>Website:</b><a href="{{this.website}}"> {{this.website}}</a> <br>
+{{/if}}
+{{#if this.director}}
+<b>Title:</b> {{this.date_location_name}} <br>
+<b>Location:</b> {{this.address}} <br>
 <b>Director:</b> {{this.director}} <br>
 {{/if}}
 <br>
